<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:context=".activities.MainActivity">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/app_title"
            android:textColor="@color/title_blue_800"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />


        <TextView
            android:id="@+id/txtMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text=""
            android:textColor="@color/title_blue_800"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRecordActivity"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/button_blue"
            android:text="@string/btn_register_activity"
            android:textColor="@color/text_button_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtMain" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnManagementReports"
            android:layout_marginHorizontal="16dp"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/button_blue"
            android:text="@string/title_reports"
            android:textColor="@color/text_button_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRecordActivity" />

        <TextView
            android:id="@+id/txtConfiguration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/title_configuration"
            android:textColor="@color/title_blue_800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.150"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnManagementReports" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnManagementConcepts"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/button_blue"
            android:text="@string/title_concepts"
            android:textColor="@color/text_button_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtConfiguration" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProfile"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button_blue"
            android:text="@string/title_profile"
            android:textColor="@color/text_button_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnManagementConcepts" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHelp"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button_blue"
            android:text="@string/btn_help"
            android:textColor="@color/text_button_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnProfile" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogOut"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button_blue"
            android:text="@string/action_logout"
            android:textColor="@color/text_button_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnHelp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>