<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:context=".activities.MainActivityAdmin">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/app_title"
            android:textColor="@color/title_blue_800"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />


        <TextView
            android:id="@+id/txtMainAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text=""
            android:textColor="@color/title_blue_800"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle" />

        <TextView
            android:id="@+id/txtAdminisPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/title_admin_panel"
            android:textColor="@color/title_blue_800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtMainAdmin" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnManagementReports"
            android:layout_marginHorizontal="16dp"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/button_blue"
            android:text="@string/title_reports"
            android:textColor="@color/text_button_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtAdminisPanel" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnManagementConceptsAdmin"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/button_blue"
            android:text="@string/title_concepts"
            android:textColor="@color/text_button_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnManagementReports" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProfileAdmin"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/button_blue"
            android:text="@string/title_profile"
            android:textColor="@color/text_button_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnManagementConceptsAdmin" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogOutAdmin"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/button_blue"
            android:text="@string/action_logout"
            android:textColor="@color/text_button_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnProfileAdmin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>