<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newReportAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:context=".activities.NewReportAdmin">

        <TextView
            android:id="@+id/txtTitleAppRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_title"
            android:textColor="@color/title_blue_800"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogoRegister" />

        <ImageView
            android:id="@+id/imgLogoRegister"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtNewReportAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_new_report"
            android:textColor="@color/title_blue_800"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitleAppRegister" />




        <TextView
            android:id="@+id/txtReportNameAdmin"
            android:layout_marginHorizontal="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_report_name"
            android:textColor="@color/title_blue_800"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNewReportAdmin" />

        <EditText
            android:id="@+id/etReportNameAdmin"
            android:layout_marginHorizontal="16dp"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#BDBDBD"
            android:ems="10"
            android:hint="@string/label_report_name"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtReportNameAdmin" />




        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGenerateAdmin"
            android:layout_marginHorizontal="16dp"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="52dp"
            android:backgroundTint="@color/button_blue"
            android:text="@string/btn_generate"
            android:textColor="@color/text_button_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etReportNameAdmin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelReportAdmin"
            android:layout_marginHorizontal="16dp"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/button_blue"
            android:text="@string/btn_cancel"
            android:textColor="@color/text_button_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnGenerateAdmin"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
