<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:context=".activities.ConfirmReport">

        <ImageView
            android:id="@+id/imgLogoSeeReport"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitleAppSeeReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_title"
            android:textColor="@color/title_blue_800"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogoSeeReport" />

        <TextView
            android:id="@+id/txtListRecordsReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_confirm_report"
            android:textColor="@color/title_blue_800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitleAppSeeReport" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListRecords"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/txtListRecordsReport"
            app:layout_constraintBottom_toTopOf="@id/btnAcceptReport"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_confirm_reports" />


<!-- BOTONES -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAcceptReport"
            android:layout_width="150dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/button_blue"
            android:text="Aceptar"
            android:textColor="@color/text_button_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReturnReport"
            android:layout_width="150dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/button_blue"
            android:text="Volver"
            android:textColor="@color/text_button_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>